--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,10 +3,10 @@ name: CI
 on:
   push:
     branches:
-      - main
+      - '**' # This will trigger on all branches
   pull_request:
     branches:
-      - main
+      - '**' # This will trigger for pull requests to any branch
 
 jobs:
   build:
