Add Husky for pre-commit linting and formatting, update eslint.config.js

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,5 @@
 {
-    "singleQuote": true,
-    "trailingComma": "es5",
-    "semi": false
-  }
-  
+  "semi": true,
+  "singleQuote": true,
+  "trailingComma": "es5"
+}
