--- a/.eslintrc
+++ b/.eslintrc
@@ -1,24 +1,16 @@
 {
-    "parser": "@typescript-eslint/parser",
-    "extends": [
-      "plugin:react/recommended",
-      "plugin:@typescript-eslint/recommended"
-    ],
-    "parserOptions": {
-      "ecmaVersion": 2020,
-      "sourceType": "module",
-      "ecmaFeatures": {
-        "jsx": true
-      }
-    },
-    "settings": {
-      "react": {
-        "version": "detect"
-      }
-    },
-    "rules": {
-      "react/prop-types": "off",
-      "@typescript-eslint/no-explicit-any": "off"
+  "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
     }
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
+  },
+  "rules": {
+    "react/react-in-jsx-scope": "off", // React no longer needs to be in scope in React 17+
+    "react/no-deprecated": "off"  // Turn off deprecated warnings if you're aware
   }
-  
+}
