--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@hookform/resolvers": "^3.9.0",
     "@sentry/react": "^8.30.0",
     "@sentry/tracing": "^7.114.0",
+    "appwrite": "^15.0.0",
     "framer-motion": "^11.5.5",
     "node-appwrite": "^14.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "react-router-dom": "^6.26.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
