--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,20 @@
 {
-  "files": [],
-  "references": [
-    { "path": "./tsconfig.app.json" },
-    { "path": "./tsconfig.node.json" }
-  ]
+  "compilerOptions": {
+    "target": "es5",                                // Use a compatible target version
+    "lib": ["dom", "dom.iterable", "esnext"],       // Include DOM and ES features
+    "allowJs": true,                                // Allow JavaScript files
+    "skipLibCheck": true,                           // Skip type checks for libraries
+    "esModuleInterop": true,                        // Enable compatibility with ES modules
+    "allowSyntheticDefaultImports": true,           // Allow default imports
+    "strict": true,                                 // Enable strict type checking
+    "forceConsistentCasingInFileNames": true,       // Ensure file name casing consistency
+    "module": "esnext",                             // Use ESNext modules
+    "moduleResolution": "node",                     // Resolve modules like Node.js
+    "resolveJsonModule": true,                      // Allow importing .json files
+    "isolatedModules": true,                        // Isolate transpiled modules
+    "jsx": "react-jsx",                             // Use JSX with React (React 17+)
+    "noEmit": true                                  // Don't emit JavaScript files
+  },
+  "include": ["src"],                               // Include only the src folder
+  "exclude": ["node_modules", "dist"]               // Exclude node_modules and dist folders
 }
