--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@sentry/tracing": "^7.114.0",
     "appwrite": "^15.0.0",
     "framer-motion": "^11.5.5",
+    "lodash": "^4.17.21",
     "node-appwrite": "^14.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
