chore(testing): install Jest and configure testing environment
- Install Jest and @testing-library for unit testing
- Update package.json with testing dependencies
- Modify tsconfig.json for Jest compatibility
- Add jest.config.js for basic Jest configuration
- Prepare environment for component and integration tests

:wq

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,11 @@
     "jsx": "react-jsx",                             // Use JSX with React (React 17+)
     "noEmit": true                                  // Don't emit JavaScript files
   },
-  "include": ["src"],                               // Include only the src folder
+  "include": [
+    "src", 
+    "src/__tests__", 
+    "jest.config.ts",
+    "jest.setup.ts"
+, "__mocks__"  ],                                                // Include src, tests, and jest config/setup
   "exclude": ["node_modules", "dist"]               // Exclude node_modules and dist folders
 }
