--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "format": "prettier --write 'src/**/*.{js,ts,tsx,json,css,md}'",
@@ -18,6 +20,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@sentry/react": "^8.30.0",
     "@sentry/tracing": "^7.114.0",
+    "@testing-library/react": "^16.0.1",
     "appwrite": "^15.0.0",
     "framer-motion": "^11.5.5",
     "lodash": "^4.17.21",
@@ -31,8 +34,11 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.11.0",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@types/jest": "^29.5.13",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/testing-library__react": "^10.0.1",
     "@typescript-eslint/eslint-plugin": "^8.6.0",
     "@typescript-eslint/parser": "^8.6.0",
     "@vitejs/plugin-react": "^4.3.1",
@@ -44,8 +50,13 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "husky": "^8.0.3",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.3.3",
-    "typescript": "^5.5.3",
+    "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.2",
     "typescript-eslint": "^8.6.0",
     "vite": "^5.4.1"
   }
