--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "test": "jest",
+    "test": "jest",  // Run tests without coverage
     "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",  // Run tests with coverage report
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "format": "prettier --write 'src/**/*.{js,ts,tsx,json,css,md}'",
