chore(gitignore): exclude coverage report from public view;already in remote CI/CD environment

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,7 @@ dist-ssr
 *.sw?
 
 .env
+coverage/clover.xml
+coverage/coverage-final.json
+coverage/lcov-report/index.html
+coverage/lcov-report/sum.ts.html
