chore(coverage): add coverage report output files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,7 @@ coverage/clover.xml
 coverage/coverage-final.json
 coverage/lcov-report/index.html
 coverage/lcov-report/sum.ts.html
+coverage/clover.xml
+coverage/coverage-final.json
+coverage/lcov-report/index.html
+coverage/lcov-report/sum.ts.html
