--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,26 @@
 {
   "compilerOptions": {
-    "target": "es5",                                // Use a compatible target version
-    "lib": ["dom", "dom.iterable", "esnext"],       // Include DOM and ES features
-    "allowJs": true,                                // Allow JavaScript files
-    "skipLibCheck": true,                           // Skip type checks for libraries
-    "esModuleInterop": true,                        // Enable compatibility with ES modules
-    "allowSyntheticDefaultImports": true,           // Allow default imports
-    "strict": true,                                 // Enable strict type checking
-    "forceConsistentCasingInFileNames": true,       // Ensure file name casing consistency
-    "module": "esnext",                             // Use ESNext modules
-    "moduleResolution": "node",                     // Resolve modules like Node.js
-    "resolveJsonModule": true,                      // Allow importing .json files
-    "isolatedModules": true,                        // Isolate transpiled modules
-    "jsx": "react-jsx",                             // Use JSX with React (React 17+)
-    "noEmit": true                                  // Don't emit JavaScript files
+    "target": "es2020",                                // Ensure a modern target for import.meta
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "module": "es2020",                                // Ensure module is compatible with import.meta
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "jsx": "react-jsx",
+    "noEmit": true
   },
   "include": [
     "src", 
     "src/__tests__", 
     "jest.config.ts",
-    "jest.setup.ts"
-, "__mocks__"  ],                                                // Include src, tests, and jest config/setup
-  "exclude": ["node_modules", "dist"]               // Exclude node_modules and dist folders
+    "jest.setup.ts",
+    "__mocks__"
+  ],
+  "exclude": ["node_modules", "dist"]
 }
