--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "preflight": "npm run format && npm run lint && npm run test && npm run build"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
