--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,6 @@
 {
-  "semi": true,
-  "singleQuote": true,
-  "trailingComma": "es5"
-}
+    "singleQuote": true,
+    "trailingComma": "es5",
+    "semi": false
+  }
+  
